[package]
name = "fr-pmx-mod-host-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fr-pmx-mod-host-proxy"
path = "src/server.rs"

[[bin]]
name = "fr-pmx-mod-host-proxy-cli"
path = "src/client.rs"

[dependencies]
prost = "0.13.1"
tokio = { version = "1.39.3", features = ["full"] }
tonic = "0.12.1"
fr-pmx-config-lib = { path = "../fr-pmx-config-lib" }
fr-logging = { path = "../fr-logging" }
clap = { version = "4.5.16", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.1"
